--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,7 +44,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a (click)="navigateToHome()" class="mil-logo">A.</a>
+                <a (click)="navigateToHome()" class="mil-logo">Bedouins.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -147,7 +147,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a (click)="navigateToHome()" class="mil-logo">A.</a>
+                <a (click)="navigateToHome()" class="mil-logo">Bedouins.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -208,7 +208,7 @@
                                             <use xlink:href="#circlePath" fill="none" />
                                             <text style="letter-spacing: 6.5px">
                                                 <!-- circle text -->
-                                                <textPath xlink:href="#circlePath">Scroll down - Scroll down - </textPath>
+                                                <textPath xlink:href="#circlePath">Bedouins - Bedouins - </textPath>
                                             </text>
                                         </g>
                                     </svg>
@@ -233,12 +233,7 @@
 
                                     <p class="mil-up mil-mb-60">Just like the nomadic Bedouin spirit, our studio is a place of movement, growth, and endless exploration, providing artists the freedom to express themselves and pursue their dreams. Whether you’re creating, performing, or connecting with industry professionals, Bedouin Studio is where your artistic journey begins and flourishes.</p>
 
-                                    <div class="mil-about-quote">
-                                        <div class="mil-avatar mil-up">
-                                            <img src="assets/img/faces/customers/2.jpg" alt="Founder">
-                                        </div>
-                                        <h6 class="mil-quote mil-up">Passionately Creating <span class="mil-thin">Design Wonders:</span> Unleashing <span class="mil-thin">Boundless Creativity</span></h6>
-                                    </div>
+
                                 </div>
 
                             </div>
@@ -247,7 +242,7 @@
                                 <div class="mil-about-photo mil-mb-90">
                                     <div class="mil-lines-place"></div>
                                     <div class="mil-up mil-img-frame" style="padding-bottom: 160%;">
-                                        <img src="assets/img/photo/1.jpg" alt="img" class="mil-scale" data-value-1="1" data-value-2="1.2">
+                                        <img src="assets/img/photo/3.jpg" alt="img" class="mil-scale" data-value-1="1" data-value-2="1.2">
                                     </div>
                                 </div>
 
@@ -358,74 +353,24 @@
                                     <div class="row mil-mb-60">
                                         <div class="col-sm-6">
 
-                                            <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="assets/img/faces/1.jpg" alt="Team member">
-                                                <div class="mil-description">
-                                                    <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a (click)="navigateToHome()">Anna Oldman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Art Director</p>
-                                                        <ul class="mil-social-icons mil-center">
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="assets/img/faces/3.jpg" alt="Team member">
-                                                <div class="mil-description">
-                                                    <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a (click)="navigateToHome()">Oscar Freeman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Frontend Dev</p>
-                                                        <ul class="mil-social-icons mil-center">
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                          
 
                                         </div>
                                         <div class="col-sm-6">
 
-                                            <p class="mil-mobile-hidden mil-text-sm mil-mb-30" style="height: 30px;"><span class="mil-accent">*</span> The founders of our agency</p>
+                                            <p class="mil-mobile-hidden mil-text-sm mil-mb-30" style="height: 30px;"><span class="mil-accent">*</span> The founder of our agency</p>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="assets/img/faces/2.jpg" alt="Team member">
+                                                <img src="assets/img/faces/9.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a (click)="navigateToHome()">Emma Newman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Founder</p>
+                                                        <h5 class="mil-muted mil-mb-5"><a (click)="navigateToPortfolio()">Aziz Almarri</a></h5>
                                                         <ul class="mil-social-icons mil-center">
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
                                             </div>
 
-                                            <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="assets/img/faces/4.jpg" alt="Team member">
-                                                <div class="mil-description">
-                                                    <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a (click)="navigateToHome()">Lisa Trueman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">UI/UX Designer</p>
-                                                        <ul class="mil-social-icons mil-center">
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a  target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
 
                                         </div>
                                     </div>
@@ -471,35 +416,30 @@
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
                                                 <h5 class="mil-up mil-mb-10">Sarah Newman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
                                                 <p class="mil-text-xl mil-up">A truly unique studio that blends heritage with modern creativity. Outstanding work!</p>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
                                                 <h5 class="mil-up mil-mb-10">Emma Trueman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
                                                 <p class="mil-text-xl mil-up">The professionalism and attention to detail are unmatched. Highly impressed!</p>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
                                                 <h5 class="mil-up mil-mb-10">Sarah Newman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
                                                 <p class="mil-text-xl mil-up">They captured the spirit of the desert perfectly. An unforgettable experience!</p>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
                                                 <h5 class="mil-up mil-mb-10">Emma Trueman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
                                                 <p class="mil-text-xl mil-up">Incredible visuals with a deep cultural touch. Highly recommended for any project!</p>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
                                                 <h5 class="mil-up mil-mb-10">Sarah Newman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
                                                 <p class="mil-text-xl mil-up">The perfect balance of tradition and innovation. Amazing team and work!</p>
                                             </div>
                                         </div>
@@ -524,7 +464,7 @@
                             <div class="row justify-content-between">
                                 <div class="col-md-4 col-lg-4 mil-mb-60">
 
-                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Bedouin.</div>
+                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Bedouins.</div>
 
                                    
 
@@ -576,6 +516,13 @@
                                             <p class="mil-light-soft mil-up">Middle East<span class="mil-no-wrap">+974 66003690</span></p>
 
                                         </div>
+                                        <div class="col-md-6 col-lg-5 mil-mb-60">
+
+                                            <h6 class="mil-muted mil-up mil-mb-30">Contact Us</h6>
+
+                                            <p class="mil-light-soft mil-up">{{email}}<span class="mil-no-wrap"></span></p>
+
+                                        </div>
                                     </div>
 
                                 </div>
@@ -584,10 +531,9 @@
                                     <div class="mil-vert-between">
                                         <div class="mil-mb-30">
                                             <ul class="mil-social-icons mil-up">
-                                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
+                                                <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-facebook"></i></a></li>
+                                                <li><a (click)="redirectToInstagram()" class="social-icon"> <i class="fab fa-instagram"></i></a></li>
+
                                             </ul>
                                         </div>
                                     </div>
