--- a/src/app/portfolio-list/portfolio-list.component.html
+++ b/src/app/portfolio-list/portfolio-list.component.html
@@ -42,7 +42,7 @@
     <div class="mil-menu-frame">
       <!-- frame clone -->
       <div class="mil-frame-top">
-        <a href="home-1.html" class="mil-logo">A.</a>
+        <a href="home-1.html" class="mil-logo">Bedouins.</a>
         <div class="mil-menu-btn">
           <span></span>
         </div>
@@ -169,7 +169,7 @@
     <!-- frame -->
     <div class="mil-frame">
       <div class="mil-frame-top">
-        <a href="home-1.html" class="mil-logo">A.</a>
+        <a href="home-1.html" class="mil-logo">Bedouins.</a>
         <div class="mil-menu-btn">
           <span></span>
         </div>
@@ -307,7 +307,7 @@
                   <div class="row justify-content-between">
                       <div class="col-md-4 col-lg-4 mil-mb-60">
   
-                          <div class="mil-muted mil-logo mil-up mil-mb-30">Bedouin.</div>
+                          <div class="mil-muted mil-logo mil-up mil-mb-30">Bedouins.</div>
   
                          
   
@@ -359,6 +359,13 @@
                                   <p class="mil-light-soft mil-up">Middle East<span class="mil-no-wrap">+974 66003690</span></p>
   
                               </div>
+                              <div class="col-md-6 col-lg-5 mil-mb-60">
+
+                                <h6 class="mil-muted mil-up mil-mb-30">Contact Us</h6>
+
+                                <p class="mil-light-soft mil-up">{{email}}<span class="mil-no-wrap"></span></p>
+
+                            </div>
                           </div>
   
                       </div>
@@ -367,10 +374,9 @@
                           <div class="mil-vert-between">
                               <div class="mil-mb-30">
                                   <ul class="mil-social-icons mil-up">
-                                      <li><a  target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                      <li><a  target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                      <li><a  target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                      <li><a  target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
+                                    <li><a  target="_blank" class="social-icon"> <i class="fab fa-facebook"></i></a></li>
+                                    <li><a (click)="redirectToInstagram()" class="social-icon"> <i class="fab fa-instagram"></i></a></li>
+
                                   </ul>
                               </div>
                           </div>
