--- a/src/app/portfolio-details/portfolio-details.component.html
+++ b/src/app/portfolio-details/portfolio-details.component.html
@@ -41,7 +41,7 @@
     <div class="mil-menu-frame">
         <!-- frame clone -->
         <div class="mil-frame-top">
-            <a href="home-1.html" class="mil-logo">A.</a>
+            <a href="home-1.html" class="mil-logo">Bedouins.</a>
             <div class="mil-menu-btn">
                 <span></span>
             </div>
@@ -144,7 +144,7 @@
     <!-- frame -->
     <div class="mil-frame">
         <div class="mil-frame-top">
-            <a href="home-1.html" class="mil-logo">A.</a>
+            <a href="home-1.html" class="mil-logo">Bedouins.</a>
             <div class="mil-menu-btn">
                 <span></span>
             </div>
@@ -204,10 +204,10 @@
                             <div class="mil-right">
                                 <div class="mil-social-frame">
                                     <ul class="mil-social-icons mil-dark">
-                                        <li><a href="#." target="_blank" class="social-icon"><i class="fab fa-behance"></i></a></li>
-                                        <li><a href="#." target="_blank" class="social-icon"><i class="fab fa-dribbble"></i></a></li>
-                                        <li><a href="#." target="_blank" class="social-icon"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#." target="_blank" class="social-icon"><i class="fab fa-github"></i></a></li>
+                                        <li><a  class="social-icon"><i class="fab fa-behance"></i></a></li>
+                                        <li><a  class="social-icon"><i class="fab fa-dribbble"></i></a></li>
+                                        <li><a  class="social-icon"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a  class="social-icon"><i class="fab fa-github"></i></a></li>
                                     </ul>
                                 </div>
                                 <a (click)="navigateToPortfolio(userProfile.id)" class="mil-button mil-arrow-place">
@@ -368,7 +368,7 @@
             <div class="row justify-content-between">
                 <div class="col-md-4 col-lg-4 mil-mb-60">
 
-                    <div class="mil-muted mil-logo mil-up mil-mb-30">Bedouin.</div>
+                    <div class="mil-muted mil-logo mil-up mil-mb-30">Bedouins.</div>
 
                    
 
@@ -420,6 +420,13 @@
                             <p class="mil-light-soft mil-up">Middle East<span class="mil-no-wrap">+974 66003690</span></p>
 
                         </div>
+                        <div class="col-md-6 col-lg-5 mil-mb-60">
+
+                            <h6 class="mil-muted mil-up mil-mb-30">Contact Us</h6>
+
+                            <p class="mil-light-soft mil-up">{{email}}<span class="mil-no-wrap"></span></p>
+
+                        </div>
                     </div>
 
                 </div>
@@ -428,10 +435,9 @@
                     <div class="mil-vert-between">
                         <div class="mil-mb-30">
                             <ul class="mil-social-icons mil-up">
-                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
+                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-facebook"></i></a></li>
+                                <li><a (click)="redirectToInstagram()" class="social-icon"> <i class="fab fa-instagram"></i></a></li>
+
                             </ul>
                         </div>
                     </div>
