--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -41,7 +41,7 @@
     <div class="mil-menu-frame">
         <!-- frame clone -->
         <div class="mil-frame-top">
-            <a href="home-1.html" class="mil-logo">A.</a>
+            <a href="home-1.html" class="mil-logo">Bedouins.</a>
             <div class="mil-menu-btn">
                 <span></span>
             </div>
@@ -144,7 +144,7 @@
     <!-- frame -->
     <div class="mil-frame">
         <div class="mil-frame-top">
-            <a href="home-1.html" class="mil-logo">A.</a>
+            <a href="home-1.html" class="mil-logo">Bedouins.</a>
             <div class="mil-menu-btn">
                 <span></span>
             </div>
@@ -398,7 +398,7 @@
     <div class="mil-menu-frame">
         <!-- frame clone -->
         <div class="mil-frame-top">
-            <a href="home-1.html" class="mil-logo">A.</a>
+            <a href="home-1.html" class="mil-logo">Bedouins.</a>
             <div class="mil-menu-btn">
                 <span></span>
             </div>
@@ -501,7 +501,7 @@
     <!-- frame -->
     <div class="mil-frame">
         <div class="mil-frame-top">
-            <a href="home-1.html" class="mil-logo">A.</a>
+            <a href="home-1.html" class="mil-logo">Bedouins.</a>
             <div class="mil-menu-btn">
                 <span></span>
             </div>
