--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -41,7 +41,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a (click)="navigateToHome()" class="mil-logo">A.</a>
+                <a (click)="navigateToHome()" class="mil-logo">Bedouins.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -144,7 +144,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a (click)="navigateToHome()" class="mil-logo">A.</a>
+                <a (click)="navigateToHome()" class="mil-logo">Bedouins.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -200,7 +200,7 @@
                                     <div class="col-lg-7">
                                         <div class="row">
                                             <div class="col-md-6 col-lg-6">
-                                                <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
+                                                <a  class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Production Team</h4>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">Producer</li>
@@ -212,7 +212,7 @@
                                                 </a>
                                             </div>
                                             <div class="col-md-6 col-lg-6">
-                                                <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor">
+                                                <a  class="mil-service-card-lg mil-more mil-accent-cursor">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Camera Department</h4>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">Cinematographer</li>
@@ -226,17 +226,17 @@
                                                 </a>
                                             </div>
                                             <div class="col-md-6 col-lg-6">
-                                                <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
+                                                <a  class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Post-Production</h4>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">Film Editor</li>
                                                         <li class="mil-up">Audio Engineer</li>
-                                                        <li href="https://www.theace.world/portfolio" href class="mil-up">VFX</li>
+                                                        <li class="mil-up" (click)="redirectToPortfolio()">VFX</li>
                                                     </ul>
                                                 </a>
                                             </div>
                                             <div class="col-md-6 col-lg-6">
-                                                <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor">
+                                                <a  class="mil-service-card-lg mil-more mil-accent-cursor">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Casting & Script</h4>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">Casting Director</li>
@@ -245,7 +245,7 @@
                                                 </a>
                                             </div>
                                             <div class="col-md-6 col-lg-6">
-                                                <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor">
+                                                <a  class="mil-service-card-lg mil-more mil-accent-cursor">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Locations & Props</h4>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">Location Manager</li>
@@ -253,7 +253,7 @@
                                                 </a>
                                             </div>
                                             <div class="col-md-6 col-lg-6">
-                                                <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor">
+                                                <a  class="mil-service-card-lg mil-more mil-accent-cursor">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Sound Department</h4>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
                                                         <li class="mil-up">Boom Operator</li>
@@ -293,7 +293,7 @@
                             <div class="row justify-content-between">
                                 <div class="col-md-4 col-lg-4 mil-mb-60">
 
-                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Bedouin.</div>
+                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Bedouins.</div>
 
                                    
 
@@ -345,6 +345,13 @@
                                             <p class="mil-light-soft mil-up">Middle East<span class="mil-no-wrap">+974 66003690</span></p>
 
                                         </div>
+                                        <div class="col-md-6 col-lg-5 mil-mb-60">
+
+                                            <h6 class="mil-muted mil-up mil-mb-30">Contact Us</h6>
+
+                                            <p class="mil-light-soft mil-up">{{email}}<span class="mil-no-wrap"></span></p>
+
+                                        </div>
                                     </div>
 
                                 </div>
@@ -353,10 +360,9 @@
                                     <div class="mil-vert-between">
                                         <div class="mil-mb-30">
                                             <ul class="mil-social-icons mil-up">
-                                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                <li><a  target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
+                                                <li><a class="social-icon"> <i class="fab fa-facebook"></i></a></li>
+                                                <li><a (click)="redirectToPortfolio()" class="social-icon"> <i class="fab fa-instagram"></i></a></li>
+
                                             </ul>
                                         </div>
                                     </div>
