--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -532,12 +532,12 @@
 
                             <div class="mil-scale-frame">
 
-                                <h1 class="mil-404" data-text="404">404</h1>
+                                <h1 class="mil-404" data-text="New Member">New Member</h1>
 
                             </div>
 
-                            <h4 class="mil-404-text mil-dark mil-mb-60">Oops! Something went wrong :(</h4>
-                            <a href="home-1.html" class="mil-button mil-arrow-place">
+                            <h4 class="mil-404-text mil-dark mil-mb-60">His work will be uploaded </h4>
+                            <a (click)="navigateToHome" class="mil-button mil-arrow-place">
                                 <span>Back to homepage</span>
                             </a>
                         </div>
