--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -177,7 +177,11 @@
                         </div>
 
                         <div class="mil-gradient"></div>
-
+<br>
+<br>
+<br>
+<br>
+<br>
                         <div class="container">
                             <div class="mil-banner-content mil-up">
 
@@ -427,19 +431,19 @@
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
-                                                <h5 class="mil-up mil-mb-10">Sarah Newman</h5>
+                                                <h5 class="mil-up mil-mb-10">leonardo Deti</h5>
                                                 <p class="mil-text-xl mil-up">They captured the spirit of the desert perfectly. An unforgettable experience!</p>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
-                                                <h5 class="mil-up mil-mb-10">Emma Trueman</h5>
+                                                <h5 class="mil-up mil-mb-10">Laura Nafas</h5>
                                                 <p class="mil-text-xl mil-up">Incredible visuals with a deep cultural touch. Highly recommended for any project!</p>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
-                                                <h5 class="mil-up mil-mb-10">Sarah Newman</h5>
+                                                <h5 class="mil-up mil-mb-10">Patrick Gauss</h5>
                                                 <p class="mil-text-xl mil-up">The perfect balance of tradition and innovation. Amazing team and work!</p>
                                             </div>
                                         </div>
