--- a/src/app/portfolio-details/portfolio-details.component.html
+++ b/src/app/portfolio-details/portfolio-details.component.html
@@ -42,7 +42,7 @@
   <div class="mil-menu-frame">
     <!-- frame clone -->
     <div class="mil-frame-top">
-      <a href="home-1.html" class="mil-logo">Bedouins.</a>
+      <a  class="mil-logo">Bedouins.</a>
       <div class="mil-menu-btn">
         <span></span>
       </div>
@@ -84,32 +84,32 @@
 
                     <ul class="mil-menu-list">
                       <li>
-                        <a href="project-1.html" class="mil-light-soft"
+                        <a  class="mil-light-soft"
                           >Interior design studio</a
                         >
                       </li>
                       <li>
-                        <a href="project-2.html" class="mil-light-soft"
+                        <a  class="mil-light-soft"
                           >Home Security Camera</a
                         >
                       </li>
                       <li>
-                        <a href="project-3.html" class="mil-light-soft"
+                        <a  class="mil-light-soft"
                           >Kemia Honest Skincare</a
                         >
                       </li>
                       <li>
-                        <a href="project-4.html" class="mil-light-soft"
+                        <a  class="mil-light-soft"
                           >Cascade of Lava</a
                         >
                       </li>
                       <li>
-                        <a href="project-5.html" class="mil-light-soft"
+                        <a  class="mil-light-soft"
                           >Air Pro by Molekule</a
                         >
                       </li>
                       <li>
-                        <a href="project-6.html" class="mil-light-soft"
+                        <a  class="mil-light-soft"
                           >Tony's Chocolonely</a
                         >
                       </li>
@@ -169,7 +169,7 @@
   <!-- frame -->
   <div class="mil-frame">
     <div class="mil-frame-top">
-      <a href="home-1.html" class="mil-logo">Bedouins.</a>
+      <a  class="mil-logo">Bedouins.</a>
       <div class="mil-menu-btn">
         <span></span>
       </div>
