--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -41,7 +41,7 @@
     <div class="mil-menu-frame">
         <!-- frame clone -->
         <div class="mil-frame-top">
-            <a href="home-1.html" class="mil-logo">Bedouins.</a>
+            <a  class="mil-logo">Bedouins.</a>
             <div class="mil-menu-btn">
                 <span></span>
             </div>
@@ -87,12 +87,13 @@
                                         <h6 class="mil-muted mil-mb-30">Projects</h6>
 
                                         <ul class="mil-menu-list">
-                                            <li><a href="project-1.html" class="mil-light-soft">Interior design studio</a></li>
-                                            <li><a href="project-2.html" class="mil-light-soft">Home Security Camera</a></li>
-                                            <li><a href="project-3.html" class="mil-light-soft">Kemia Honest Skincare</a></li>
-                                            <li><a href="project-4.html" class="mil-light-soft">Cascade of Lava</a></li>
-                                            <li><a href="project-5.html" class="mil-light-soft">Air Pro by Molekule</a></li>
-                                            <li><a href="project-6.html" class="mil-light-soft">Tony's Chocolonely</a></li>
+                                            <li><a 
+                                                 class="mil-light-soft">Interior design studio</a></li>
+                                            <li><a class="mil-light-soft">Home Security Camera</a></li>
+                                            <li><a  class="mil-light-soft">Kemia Honest Skincare</a></li>
+                                            <li><a  class="mil-light-soft">Cascade of Lava</a></li>
+                                            <li><a  class="mil-light-soft">Air Pro by Molekule</a></li>
+                                            <li><a  class="mil-light-soft">Tony's Chocolonely</a></li>
                                         </ul>
 
                                     </div>
@@ -144,7 +145,7 @@
     <!-- frame -->
     <div class="mil-frame">
         <div class="mil-frame-top">
-            <a href="home-1.html" class="mil-logo">Bedouins.</a>
+            <a href= class="mil-logo">Bedouins.</a>
             <div class="mil-menu-btn">
                 <span></span>
             </div>
@@ -398,7 +399,7 @@
     <div class="mil-menu-frame">
         <!-- frame clone -->
         <div class="mil-frame-top">
-            <a href="home-1.html" class="mil-logo">Bedouins.</a>
+            <a class="mil-logo">Bedouins.</a>
             <div class="mil-menu-btn">
                 <span></span>
             </div>
@@ -444,12 +445,12 @@
                                         <h6 class="mil-muted mil-mb-30">Projects</h6>
 
                                         <ul class="mil-menu-list">
-                                            <li><a href="project-1.html" class="mil-light-soft">Interior design studio</a></li>
-                                            <li><a href="project-2.html" class="mil-light-soft">Home Security Camera</a></li>
-                                            <li><a href="project-3.html" class="mil-light-soft">Kemia Honest Skincare</a></li>
-                                            <li><a href="project-4.html" class="mil-light-soft">Cascade of Lava</a></li>
-                                            <li><a href="project-5.html" class="mil-light-soft">Air Pro by Molekule</a></li>
-                                            <li><a href="project-6.html" class="mil-light-soft">Tony's Chocolonely</a></li>
+                                            <li><a  class="mil-light-soft">Interior design studio</a></li>
+                                            <li><a  class="mil-light-soft">Home Security Camera</a></li>
+                                            <li><a  class="mil-light-soft">Kemia Honest Skincare</a></li>
+                                            <li><a  class="mil-light-soft">Cascade of Lava</a></li>
+                                            <li><a  class="mil-light-soft">Air Pro by Molekule</a></li>
+                                            <li><a  class="mil-light-soft">Tony's Chocolonely</a></li>
                                         </ul>
 
                                     </div>
@@ -501,7 +502,7 @@
     <!-- frame -->
     <div class="mil-frame">
         <div class="mil-frame-top">
-            <a href="home-1.html" class="mil-logo">Bedouins.</a>
+            <a  class="mil-logo">Bedouins.</a>
             <div class="mil-menu-btn">
                 <span></span>
             </div>
