--- a/src/app/portfolio-list/portfolio-list.component.html
+++ b/src/app/portfolio-list/portfolio-list.component.html
@@ -42,7 +42,7 @@
     <div class="mil-menu-frame">
       <!-- frame clone -->
       <div class="mil-frame-top">
-        <a href="home-1.html" class="mil-logo">Bedouins.</a>
+        <a  class="mil-logo">Bedouins.</a>
         <div class="mil-menu-btn">
           <span></span>
         </div>
@@ -84,32 +84,32 @@
   
                       <ul class="mil-menu-list">
                         <li>
-                          <a href="project-1.html" class="mil-light-soft"
+                          <a  class="mil-light-soft"
                             >Interior design studio</a
                           >
                         </li>
                         <li>
-                          <a href="project-2.html" class="mil-light-soft"
+                          <a  class="mil-light-soft"
                             >Home Security Camera</a
                           >
                         </li>
                         <li>
-                          <a href="project-3.html" class="mil-light-soft"
+                          <a  class="mil-light-soft"
                             >Kemia Honest Skincare</a
                           >
                         </li>
                         <li>
-                          <a href="project-4.html" class="mil-light-soft"
+                          <a  class="mil-light-soft"
                             >Cascade of Lava</a
                           >
                         </li>
                         <li>
-                          <a href="project-5.html" class="mil-light-soft"
+                          <a class="mil-light-soft"
                             >Air Pro by Molekule</a
                           >
                         </li>
                         <li>
-                          <a href="project-6.html" class="mil-light-soft"
+                          <a  class="mil-light-soft"
                             >Tony's Chocolonely</a
                           >
                         </li>
@@ -169,7 +169,7 @@
     <!-- frame -->
     <div class="mil-frame">
       <div class="mil-frame-top">
-        <a href="home-1.html" class="mil-logo">Bedouins.</a>
+        <a  class="mil-logo">Bedouins.</a>
         <div class="mil-menu-btn">
           <span></span>
         </div>
@@ -200,8 +200,9 @@
             </div>
             <div class="container">
               <ul class="mil-breadcrumbs mil-mb-60">
-                <li><a href="home-1.html">Homepage</a></li>
-                <li><a href="team.html">Team</a></li>
+                <li><a 
+                  >Homepage</a></li>
+                <li><a >Team</a></li>
               </ul>
               <h1 class="mil-mb-60">
                 Meet <span class="mil-thin">Our</span><br />
@@ -224,7 +225,10 @@
                       <select
                         id="categorySelect"
                         class="form-control"
-                        
+                        [(ngModel)]="selectedCategory"
+
+                        (change)="filterProfilesByCategory()"
+
                       >
                         <option value="All">All</option>
                         <option
@@ -262,7 +266,7 @@
                   <div class="mil-description">
                     <div class="mil-secrc-text">
                       <h5 class="mil-muted mil-mb-5">
-                        <a href="home-2.html"
+                        <a (click)="navigateToPortfolio(user.id)"
                           >{{ user.lastName }} {{ user.name }}</a
                         >
                       </h5>
