--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -87,12 +87,12 @@
                                             <h6 class="mil-muted mil-mb-30">Projects</h6>
 
                                             <ul class="mil-menu-list">
-                                                <li><a href="project-1.html" class="mil-light-soft">Interior design studio</a></li>
-                                                <li><a href="project-2.html" class="mil-light-soft">Home Security Camera</a></li>
-                                                <li><a href="project-3.html" class="mil-light-soft">Kemia Honest Skincare</a></li>
-                                                <li><a href="project-4.html" class="mil-light-soft">Cascade of Lava</a></li>
-                                                <li><a href="project-5.html" class="mil-light-soft">Air Pro by Molekule</a></li>
-                                                <li><a href="project-6.html" class="mil-light-soft">Tony's Chocolonely</a></li>
+                                                <li><a  class="mil-light-soft">Interior design studio</a></li>
+                                                <li><a  class="mil-light-soft">Home Security Camera</a></li>
+                                                <li><a  class="mil-light-soft">Kemia Honest Skincare</a></li>
+                                                <li><a class="mil-light-soft">Cascade of Lava</a></li>
+                                                <li><a  class="mil-light-soft">Air Pro by Molekule</a></li>
+                                                <li><a  class="mil-light-soft">Tony's Chocolonely</a></li>
                                             </ul>
 
                                         </div>
