--- a/src/app/portfolio-list/portfolio-list.component.html
+++ b/src/app/portfolio-list/portfolio-list.component.html
@@ -258,7 +258,7 @@
               >
                 <div class="mil-team-card mil-up mil-mb-30">
                   <img
-                    [src]="'http://162.0.237.75:8089/' + user.profileImagePath"
+                    [src]="'https://bedouinsstudios.com:8089/' + user.profileImagePath"
                     alt="Team member"
                     class="d-block w-100"
                   />
