--- a/src/app/portfolio-details/portfolio-details.component.html
+++ b/src/app/portfolio-details/portfolio-details.component.html
@@ -218,7 +218,7 @@
                 <div class="mil-portrait-frame">
                   <img
                     [src]="
-                      'http://162.0.237.75:8089/' + userProfile.profileImagePath
+                      'https://bedouinsstudios.com:8089/' + userProfile.profileImagePath
                     "
                     alt="{{ userProfile.profileImagePath }}"
                     class="d-block w-100"
@@ -444,7 +444,7 @@
             "
           >
             <img
-              [src]="'http://162.0.237.75:8089/' + mediaItem"
+              [src]="'https://bedouinsstudios.com:8089/' + mediaItem"
               alt="{{ project.projectName }}"
               class="d-block w-100"
             />
