--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,15 +58,15 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-has-children mil-active">
-                                        <a (click)="navigateToHome()">Homepage</a>
+                                        <a [routerLink]="['/home']">Homepage</a>
                                         
                                     </li>
                                     <li class="mil-has-children">
-                                        <a (click)="navigateToPortfolio()">Portfolio</a>
+                                        <a [routerLink]="['/portfolio-list']">Portfolio</a>
                                       
                                     </li>
                                     <li class="mil-has-children">
-                                        <a (click)="navigateToServices()">Services</a>
+                                        <a [routerLink]="['/services']">Services</a>
                                        
                                     </li>
                                
